<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp" 
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/icon" 
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/about"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/info" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/orange" />

    <TextView
        style="@style/Text"
        android:layout_marginTop="5dp"
        android:text="@string/info"
        android:textColor="@color/yellow"
        android:textSize="16sp" />

    <TextView
        style="@style/Text"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_pkg_name"
        android:textColor="@color/green_light"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/pkg_opt_spinner"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_spinner"
        android:padding="3dp" />

    <EditText
        android:id="@+id/packageName_et"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_grey_border"
        android:gravity="center_vertical"
        android:hint="App Package Name"
        android:padding="3dp"
        android:textColor="@color/green_light"
        android:textColorHint="#acacac"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/getHashKey_btn"
        style="@style/ButtonTextBlack"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_yellow_selector"
        android:text="Get HashKey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/Text"
            android:layout_marginTop="10dp"
            android:text="HashKey"
            android:textColor="@color/green_light"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/hash_et"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_grey_border"
            android:gravity="center"
            android:textColor="@color/green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shareHashKey_btn"
            style="@style/ButtonTextBlack"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_yellow_selector"
            android:text="Share" />
    </LinearLayout>

</LinearLayout>